@@ -1,17 +1,17 @@
 $NetBSD$
 
-SHA1 (suse121/aaa_base-12.1-534.107.1.i586.rpm) = 20a43c2c588cc88df835ca49ec844cb31ea08004
-RMD160 (suse121/aaa_base-12.1-534.107.1.i586.rpm) = e4e0cb09c7b64a5b3e47dfe2df4e874dd48253ce
-Size (suse121/aaa_base-12.1-534.107.1.i586.rpm) = 126912 bytes
-SHA1 (suse121/aaa_base-12.1-534.107.1.x86_64.rpm) = ec51c56bc0bb09c5d605df5eac397626b838c092
-RMD160 (suse121/aaa_base-12.1-534.107.1.x86_64.rpm) = 56c290560fb8cb1d58b705030de4a52cfe4a84e3
-Size (suse121/aaa_base-12.1-534.107.1.x86_64.rpm) = 126909 bytes
-SHA1 (suse121/bash-4.2-1.8.1.i586.rpm) = 38e7eba166e5b68d9d3ca8d7bab951aca6825acf
-RMD160 (suse121/bash-4.2-1.8.1.i586.rpm) = 37c97e46df6e9d67daa3cad1c17dcedaf61c2f0f
-Size (suse121/bash-4.2-1.8.1.i586.rpm) = 314852 bytes
-SHA1 (suse121/bash-4.2-1.8.1.x86_64.rpm) = dfdfbc07b6f5bd31215a3be67f16cf5700b2b304
-RMD160 (suse121/bash-4.2-1.8.1.x86_64.rpm) = 968ea1615be64d9a21bc6c2d8dacecb70724e140
-Size (suse121/bash-4.2-1.8.1.x86_64.rpm) = 330879 bytes
+SHA1 (suse121/aaa_base-12.1-534.113.1.i586.rpm) = 6a7ac9d0ca40fdc1bb84d9fa7560349396444e99
+RMD160 (suse121/aaa_base-12.1-534.113.1.i586.rpm) = 8542a4a3c13123be26646d9efc1dcaa09aad361e
+Size (suse121/aaa_base-12.1-534.113.1.i586.rpm) = 127320 bytes
+SHA1 (suse121/aaa_base-12.1-534.113.1.x86_64.rpm) = c7c7e74d5815a04f5d34e324d522ad13f2d4c7af
+RMD160 (suse121/aaa_base-12.1-534.113.1.x86_64.rpm) = 002bd0f9908ebb1316b3e69d42ae91cfafcbef33
+Size (suse121/aaa_base-12.1-534.113.1.x86_64.rpm) = 127303 bytes
+SHA1 (suse121/bash-4.2-1.11.1.i586.rpm) = 2cdcddd26e0b87a94f6facd35c19ec4e743674b3
+RMD160 (suse121/bash-4.2-1.11.1.i586.rpm) = 201b3c6b8ee8d483ac5d7119b2f7ac10ebafac47
+Size (suse121/bash-4.2-1.11.1.i586.rpm) = 315371 bytes
+SHA1 (suse121/bash-4.2-1.11.1.x86_64.rpm) = d988067c6977c0ec47f793f802cb280fcc71a0b9
+RMD160 (suse121/bash-4.2-1.11.1.x86_64.rpm) = 621223f5cba1162920105ce48cbe371e75f4e697
+Size (suse121/bash-4.2-1.11.1.x86_64.rpm) = 331063 bytes
 SHA1 (suse121/coreutils-8.14-3.1.2.i586.rpm) = 4d29f02e812b4e4ebc0125a58c0a5360465011cd
 RMD160 (suse121/coreutils-8.14-3.1.2.i586.rpm) = 95f3aa49f1cb7c956c683d71933e05d394f0079a
 Size (suse121/coreutils-8.14-3.1.2.i586.rpm) = 1098850 bytes
@@ -36,12 +36,12 @@ Size (suse121/gdbm-1.8.3-388.1.3.i586.rpm) = 25375 bytes
 SHA1 (suse121/gdbm-1.8.3-388.1.3.x86_64.rpm) = 1aab75ee3cd29715d57d5c7e52738edc7faaaf1d
 RMD160 (suse121/gdbm-1.8.3-388.1.3.x86_64.rpm) = 1fb8df60f3cf9cb954c825689836d58d18c97db7
 Size (suse121/gdbm-1.8.3-388.1.3.x86_64.rpm) = 25502 bytes
-SHA1 (suse121/glibc-2.14.1-14.25.1.i586.rpm) = b563c206a4f743691447430426c1b25447dd15d7
-RMD160 (suse121/glibc-2.14.1-14.25.1.i586.rpm) = 90924227d08c039ae13eb1fd15af1b5368b98d09
-Size (suse121/glibc-2.14.1-14.25.1.i586.rpm) = 1454141 bytes
-SHA1 (suse121/glibc-2.14.1-14.25.1.x86_64.rpm) = 9f0d59182947e4c12a5c9b1f644aac19d413de71
-RMD160 (suse121/glibc-2.14.1-14.25.1.x86_64.rpm) = bc6c4f638334667f74f2e6bbe16ba46ffc96361e
-Size (suse121/glibc-2.14.1-14.25.1.x86_64.rpm) = 1465942 bytes
+SHA1 (suse121/glibc-2.14.1-14.27.1.i586.rpm) = 8fb307a89415a0f99b3aa70deb2ceab58514bc9c
+RMD160 (suse121/glibc-2.14.1-14.27.1.i586.rpm) = 469e191fab4d2816333b4404e4d69f5405f4caeb
+Size (suse121/glibc-2.14.1-14.27.1.i586.rpm) = 1453587 bytes
+SHA1 (suse121/glibc-2.14.1-14.27.1.x86_64.rpm) = 72d7870f5f8dac113d709a702d3a3893fb34e751
+RMD160 (suse121/glibc-2.14.1-14.27.1.x86_64.rpm) = 9ab842aa14e35456a063fd0f44de6e9c1166db20
+Size (suse121/glibc-2.14.1-14.27.1.x86_64.rpm) = 1466119 bytes
 SHA1 (suse121/keyutils-1.5.3-2.1.2.i586.rpm) = c839eb9b28d96add46c5de8539890a944f4939d2
 RMD160 (suse121/keyutils-1.5.3-2.1.2.i586.rpm) = 9f71732a0c6060e4b5a61ad42960c848b1252a62
 Size (suse121/keyutils-1.5.3-2.1.2.i586.rpm) = 65801 bytes
@@ -114,12 +114,12 @@ Size (suse121/libpcre0-8.13-2.1.2.i586.rpm) = 160053 bytes
 SHA1 (suse121/libpcre0-8.13-2.1.2.x86_64.rpm) = 29093f99bdab7b93e537ab958ad18fb4a345ad1f
 RMD160 (suse121/libpcre0-8.13-2.1.2.x86_64.rpm) = 2f3efa7a68583cf3fa5f2fbb67be3156a7691de9
 Size (suse121/libpcre0-8.13-2.1.2.x86_64.rpm) = 161999 bytes
-SHA1 (suse121/libreadline6-6.2-1.8.1.i586.rpm) = a5080095a765f459552fffed3795bd0d64fcbe4f
-RMD160 (suse121/libreadline6-6.2-1.8.1.i586.rpm) = 0f5f25074a148b110951047ddd0e62943c9036e9
-Size (suse121/libreadline6-6.2-1.8.1.i586.rpm) = 118861 bytes
-SHA1 (suse121/libreadline6-6.2-1.8.1.x86_64.rpm) = 673f664f7634ef8f6e6b4d554a50622cc969838b
-RMD160 (suse121/libreadline6-6.2-1.8.1.x86_64.rpm) = 83631e18c472587efc07d4dda57583f3fe141dc2
-Size (suse121/libreadline6-6.2-1.8.1.x86_64.rpm) = 122062 bytes
+SHA1 (suse121/libreadline6-6.2-1.11.1.i586.rpm) = 75418c814051bd5afb9806d1bcf6003b1e735aad
+RMD160 (suse121/libreadline6-6.2-1.11.1.i586.rpm) = 238b0ed2b5f490e57a862ed949a0849db2315bb4
+Size (suse121/libreadline6-6.2-1.11.1.i586.rpm) = 119328 bytes
+SHA1 (suse121/libreadline6-6.2-1.11.1.x86_64.rpm) = d0eb15bb8e2c0afc61ea287605ff03f8a97135fe
+RMD160 (suse121/libreadline6-6.2-1.11.1.x86_64.rpm) = 94ba22d1f7b5865a39967f17db2c6082aa76b140
+Size (suse121/libreadline6-6.2-1.11.1.x86_64.rpm) = 122467 bytes
 SHA1 (suse121/libselinux1-2.0.91-14.1.12.i586.rpm) = 514a6843a858316ed0cb6e1b1182b856a4911b8e
 RMD160 (suse121/libselinux1-2.0.91-14.1.12.i586.rpm) = 6c0dd6d73d006238bcbaee83003ee8eccf17ed61
 Size (suse121/libselinux1-2.0.91-14.1.12.i586.rpm) = 50641 bytes
