@@ -1,8 +1,8 @@
 $NetBSD$
 
-SHA1 (suse121/libxml2-2.7.8+git20110708-3.3.1.i586.rpm) = 63b1037bfdf23c518d68f15fa7409da57fe351d0
-RMD160 (suse121/libxml2-2.7.8+git20110708-3.3.1.i586.rpm) = 9bb4e2d7e782e5a9631d393ea7a8c920e6282229
-Size (suse121/libxml2-2.7.8+git20110708-3.3.1.i586.rpm) = 568996 bytes
-SHA1 (suse121/libxml2-2.7.8+git20110708-3.3.1.x86_64.rpm) = 3cee775de4beef647d801d426e0c5936159f68f4
-RMD160 (suse121/libxml2-2.7.8+git20110708-3.3.1.x86_64.rpm) = 1942a4ae2ae8f730013166f223a3ba078c8f3ab8
-Size (suse121/libxml2-2.7.8+git20110708-3.3.1.x86_64.rpm) = 577500 bytes
+SHA1 (suse121/libxml2-2.7.8+git20110708-3.5.1.i586.rpm) = 09b87c3ff2d720f5da1461e48044546ce91dbbf1
+RMD160 (suse121/libxml2-2.7.8+git20110708-3.5.1.i586.rpm) = 1a7daf6a7f9cbf6c8be5b6e7fcb23ce9398d1e22
+Size (suse121/libxml2-2.7.8+git20110708-3.5.1.i586.rpm) = 569115 bytes
+SHA1 (suse121/libxml2-2.7.8+git20110708-3.5.1.x86_64.rpm) = 8a57f9aa0f9c13721c9e426c496c1f36410f7e62
+RMD160 (suse121/libxml2-2.7.8+git20110708-3.5.1.x86_64.rpm) = 6489004ec64838d90cd4d3ef42319642f6e87c14
+Size (suse121/libxml2-2.7.8+git20110708-3.5.1.x86_64.rpm) = 577907 bytes
