@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2012,v 1.1597 2012/05/26 15:54:02 ryoon Exp $
+$NetBSD: CHANGES-2012,v 1.1600 2012/05/27 12:16:32 obache Exp $
 
 Changes to the packages collection and infrastructure in 2012:
 
@@ -2507,3 +2507,6 @@ Changes to the packages collection and infrastructure in 2012:
 	Updated shells/tcsh to 6.18.01nb2 [he 2012-05-26]
 	Updated x11/kterm to 6.2.0nb22 [ryoon 2012-05-26]
 	Updated textproc/py-feedparser to 5.1.2 [schmonz 2012-05-26]
+	Updated emulators/suse121_libxml2 to 12.1nb1 [obache 2012-05-27]
+	Updated emulators/suse121_base to 12.1nb2 [obache 2012-05-27]
+	Updated www/opera-plugins to 1.0nb3 [obache 2012-05-27]
